--- a/client/src/components/BlogCard/blogcard.css
+++ b/client/src/components/BlogCard/blogcard.css
@@ -10,7 +10,6 @@
     object-fit: cover;
     border-radius: 7px;
   }
-
   .blog-data {
     display: flex;
     flex-direction: column;
@@ -56,4 +55,20 @@
     display: -webkit-box;
     -webkit-line-clamp: 4;
     -webkit-box-orient: vertical;
+  }
+
+
+  @media only screen and (min-width: 320px) and (max-width: 479px){ 
+    .blog-card{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      margin: 10px 0px;
+  }
+  .blog-img {
+      max-width: 100%;
+      height: 280px;
+      object-fit: cover;
+      border-radius: 7px;
+    }
   }
