--- a/client/src/components/CreatePost/createpost.css
+++ b/client/src/components/CreatePost/createpost.css
@@ -19,17 +19,22 @@ position: relative;
 }
 
 .post-input {
-    font-size: 2rem;
+    font-size: 1.5rem;
     border: none;
     padding: 20px;
     width: 70vw;
     outline: none;
+}
+
+.post-title{
+    margin-top: 10px;
 }
 .post-input:focus{
     outline: none;
 }
 .post-content{
     font-size: 1rem;
+    height: 50vh;
 }
 .post-form  .post-submit{
     position: absolute;
@@ -47,9 +52,58 @@ position: relative;
 }
 
 .post-img{
-margin-left: 150px;
+  margin-left: 150px;
   width: 70vw;
   height: 250px;
   border-radius: 10px;
   object-fit: cover;
+}
+  
+
+@media only screen and (min-width: 280px) and (max-width: 720px){ 
+    .post-page {
+        padding: 1em;
+        }
+    .post-form-group{
+        margin: 0px;
+    }
+    .post-form  .post-submit{
+        position: absolute;
+        top: 20px;
+        right: 10px;
+        background-color: lightseagreen;
+        outline: none;
+        border: none;
+        font-size: 1rem;
+        padding: 0.2em;
+        width: 50px;
+        color: white;
+        border-radius:10px;
+        cursor: pointer;
+    }
+    .post-img{
+        margin-left: 0px;
+        width: 90vw;
+        height: 250px;
+      }
+      .post-input {
+        width: 50vw;
+    }
+    
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1366px){
+    .post-page {
+        padding: 1em;
+        }
+    .post-form-group{
+        margin: 0px;
+    }
+    .post-img{
+        margin-left: 20px;
+        width: 90vw;
+        height: 250px;
+        border-radius: 10px;
+        object-fit: cover;
+      }
 }
