--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -13,13 +13,17 @@
 }
 
 .navbar-left,.navbar-right{
-    flex:3;
+    flex:4;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .navbar-center{
     flex:6;
+}
+.navbar-left .logolink{
+    text-decoration: none;
+    color: black;
 }
 .navbar-left h1{
     font-family:  'Josefin Sans', sans-serif;
@@ -37,20 +41,51 @@
     list-style: none;
 }
  .navbar-items .navbar-item{
-    margin-right: 40px;
+    margin-right: 20px;
     cursor: pointer;
-    font-size: 1.5;
 }
 .navbar-item .links{
     text-decoration: none;
     color: inherit;
+    font-size: 0.8rem;
 }
 .active-class{
 
 }
-
-.navbar-search {
+/* .navbar-search {
     font-size: 20px;
     cursor: pointer;
     margin-left: 10px;
+} */
+.navbar-profile-img {
+    cursor: pointer;
+}
+
+
+@media only screen and (min-width: 280px) and (max-width: 653px){ 
+    .navbar-left h1{
+        font-family:  'Josefin Sans', sans-serif;
+        font-size: 1rem;
+        margin-left: 20px;
+    }
+}
+@media only screen and (min-width: 320px) and (max-width: 479px){ 
+    .navbar-left h1{
+        font-family:  'Josefin Sans', sans-serif;
+        font-size: 1rem;
+        margin-left: 20px;
+    }
+}
+@media only screen and (min-width: 1024px) and (max-width: 1366px){ 
+    .navbar-left h1{
+        font-family:  'Josefin Sans', sans-serif;
+        font-size: 1.5rem;
+        margin-left: 20px;
+    }
+
+    .navbar-item .links{
+        text-decoration: none;
+        color: inherit;
+        font-size: 1.5rem;
+    }
 }
